Portafolio terminado, versión minimalista

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -402,18 +402,13 @@ body {
     margin-top: 0rem;
     margin-bottom: 0rem; }
   /*Para sacar la transformación de los items del menú*/
-  .hoverMenu {
-    transition: none; }
-  .hoverMenu:hover {
-    transform: none; }
+  #menu:hover {
+    transform: none;
+    text-decoration: none; }
   .logo {
     padding-right: 3vw; }
   .gear {
     font-size: 5vh; }
-  .justBeNice {
-    font-size: 12vh;
-    margin-left: 2vw;
-    margin-bottom: 1.8rem; }
   .logo a {
     font-size: 6vw; }
   .logo a p {
@@ -455,9 +450,7 @@ body {
   .proyecto {
     width: 75%; }
   .imgFotoPerfil {
-    max-width: 40vw; }
-  .justBeNice {
-    margin-bottom: 1.7rem; } }
+    max-width: 40vw; } }
 
 @media (max-width: 575.98px) {
   .tituloPrincipal {
@@ -475,10 +468,6 @@ body {
   .gear {
     font-size: 3.5vh;
     margin-right: 0.5rem; }
-  .justBeNice {
-    font-size: 7vh;
-    padding-left: 0.5rem;
-    margin-top: 1.25rem; }
   .logo a p {
     font-size: 2.75vh; }
   .resumen {
