--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,24 +73,11 @@ body {
 .gear {
   font-family: "WebSymbolsRegular";
   margin: 0 1vw 0 0;
-  font-size: 5vh;
-  text-shadow: 0px 0px 3px #ccc; }
+  height: 10vh; }
 
 /***** animaciones *****/
 /*animación para hacer girar un elemento*/
-.rodar {
-  animation-name: rodar;
-  animation-duration: 1.9s;
-  animation-iteration-count: infinite;
-  animation-timing-function: linear; }
-
-@keyframes rodar {
-  from {
-    transform: rotateZ(0deg); }
-  to {
-    transform: rotateZ(360deg); } }
-
-/*animación para hacer un elemento y que genere el efecto de desaparecer*/
+/*animación para hacer caer un elemento y que genere el efecto de desaparecer*/
 .logo:hover .gear {
   animation: cae 500ms linear; }
 
@@ -385,8 +372,6 @@ body {
     font-size: 1.25rem; }
   .proyecto {
     width: 40%; }
-  .justBeNice {
-    margin-bottom: 1.9rem; }
   #footer {
     min-height: 18vh; } }
 
@@ -407,8 +392,6 @@ body {
     text-decoration: none; }
   .logo {
     padding-right: 3vw; }
-  .gear {
-    font-size: 5vh; }
   .logo a {
     font-size: 6vw; }
   .logo a p {
@@ -466,8 +449,7 @@ body {
   .logo {
     padding-right: 3.5vw; }
   .gear {
-    font-size: 3.5vh;
-    margin-right: 0.5rem; }
+    height: 7vh; }
   .logo a p {
     font-size: 2.75vh; }
   .resumen {
