--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -396,8 +396,8 @@ body {
 
 /* clases para el footer */
 #footer {
-  max-width: 100vw;
-  min-height: 22vh;
+  /* max-width: 100vw; */
+  height: 22vh;
   background-color: var(--colorContenedor);
   text-align: center; 
 }
