--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -331,6 +331,12 @@ body {
   box-shadow: 0px 0px 5px var(--colorSombra) inset; 
 }
 
+.proyecto-hover:hover {
+  background-color: rgba(199, 198, 198, 0.504);
+  background-blend-mode: darken;
+  transition: all 1s;
+}
+
 .img {
   /*640 ancho x 426 alto*/
   width: 100%;
