Formación de data engineer de Código Facilito y Datapath agregados

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,7 +29,7 @@
   /* --HoverBotonDos: #e60e23; */
   --btnDosHover: #00395f;
   /*Color para los background del header, titulos y footer*/
-  --colorContenedor: black;
+  --colorContenedor: #05122A;
   /* Variables de fuentes de letras */
   --fuenteUno: "Nunito", sans-serif; 
 }
