--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,7 +53,8 @@ body {
 #menu:hover {
   transform: scale(1.15, 1.15);
   text-decoration: underline;
-  color: #f8f9fa; 
+  color: var(--colorTres);
+  text-shadow: 2px 2px 5px var(--colorDos); 
 }
 
 .logo {
@@ -103,7 +104,8 @@ body {
 
 .logo:hover a {
   animation: fromRight 300ms linear;
-  color: #f8f9fa; 
+  color: var(--colorTres);
+  text-shadow: 2px 2px 5px var(--colorDos); 
 }
 
 @keyframes fromRight {
@@ -164,14 +166,14 @@ body {
 .iconoPresentacion {
   height: 6.5vh;
   width: auto;
-  background-color: var(--colorUno);
+  background-color: var(--colorContenedor);
   border-radius: 50%;
   padding: 4px;
   transition: all 300ms; 
 }
 
 .iconoPresentacion:hover {
-  opacity: 0.6; 
+  border-radius: 10%;
 }
 
 .nombreIcono {
@@ -332,9 +334,10 @@ body {
 }
 
 .proyecto-hover:hover {
-  background-color: rgba(199, 198, 198, 0.504);
-  background-blend-mode: darken;
-  transition: all 1s;
+  background-color: var(--colorContenedor);
+  color: var(--colorTres);
+  /* background-blend-mode: darken; */
+  transition: all 1.1s;
 }
 
 .img {
@@ -359,16 +362,17 @@ body {
 }
 
 .btnColorUno {
-  background-color: var(--colorUno);
-  color: var(--colorTres);
+  background-color: var(--colorTres);
+  border-color: var(--colorContenedor);
+  color: var(--colorContenedor);
   font-family: var(--fuenteUno), sans-serif;
   font-weight: bold;
-  margin: 0px 12px 12px 12px; 
+  margin: 0px 12px 12px 12px;
 }
 
 .btnColorUno:hover {
-  background-color: var(--colorContenedor);
-  color: var(--colorTres); 
+  background-color: var(--colorDos);
+  color: var(--colorContenedor); 
 }
 
 .btnColorDos {
@@ -433,7 +437,8 @@ body {
 }
 
 #escribeme:hover {
-  color: var(--colorTres)
+  color: var(--colorTres);
+  text-shadow: 2px 2px 5px var(--colorDos);
 }
 
 /* media querys para una mejor adaptación */
